# django-fritzconnection

./: .gitignore  .pre-commit-config.yaml  AUTHORS  README.md  manage.py  pyproject.toml  requirements.dev.txt  requirements.django32.txt  requirements.django41.txt  requirements.txt
.github/workflows/: ci.yml  tests.yml
djfritz/: __init__.py  apps.py  context_processors.py  fritz_connection.py  permissions.py  signals.py  urls.py
djfritz/admin/: __init__.py  hosts.py  hosts_groups.py
djfritz/admin_views/: __init__.py  base_views.py  diagnose.py  group_management.py  host_infomation.py
djfritz/locale/de/LC_MESSAGES/: django.mo  django.po
djfritz/locale/en/LC_MESSAGES/: django.mo  django.po
djfritz/management/commands/: run_testserver.py  update_hosts.py
djfritz/migrations/: 0001_add_host_model.py  0002_hostmodel_ip_v4_hostmodel_ip_v6.py  0003_hostmodel_wan_access.py  0004_host_group.py  0005_alter_hostmodel_group.py
djfritz/models/: __init__.py  base.py  hosts.py  hosts_groups.py
djfritz/services/: hosts.py
djfritz/templates/admin/djfritz/hostmodel/: change_form_object_tools.html  change_list.html  column_verbose_name.html
djfritz/templates/djfritz/: diagnose_connection.html  group_management.html  host_information.html  host_name_info.html  last_connect_info.html  list_box_services.html  mesh_topology.html
djfritz/templates/djfritz/includes/: dynamic_view_menu.html  fritzbox_link.html
djfritz/templatetags/: djfritz.py
djfritz/tests/fixtures/: users.py
djfritz/views/: __init__.py  base_views.py  diagnose.py  group_management.py  host_infomation.py
djfritz_project/: __init__.py  __main__.py  dev_shell.py  manage.py  publish.py  urls.py
djfritz_project/settings/: base.py  local.py  prod.py  tests.py
djfritz_project/templates/admin/: base_site.html  index.html
djfritz_project/tests/: __init__.py  test_admin.py  test_admin_admin_index_page_1.snapshot.html  test_admin_extra_views.py  test_admin_extra_views_superuser_access_1.snapshot.json  test_bootstrap.py  test_dev_shell_commands.py  test_project_setup.py  test_readme_history.py  test_run_testserver.py  utilities.py  utils.py
djfritz_project/tests/admin/: test_hosts.py  test_hosts_empty_1.snapshot.html  test_hosts_unique_name_filter_1.snapshot.html  test_hosts_unique_name_filter_2.snapshot.html  test_hosts_unique_name_filter_3.snapshot.html
